--- a/esboçonotas.html
+++ b/esboçonotas.html
@@ -27,6 +27,15 @@
                 text-align: center;
                 font-size: 20px;
             }
+            .aprovado{
+                background-color: green;
+                color: white;
+            }
+            .reprovado{
+                background-color: red;
+                color: white;
+            }
+
         </style>
     </head>
     <body>
@@ -50,7 +59,7 @@
                 <td>X</td>
                 <td>X</td>
                 <td>X</td>
-                <td>X</td>
+                <td class="aprovado">X</td>
             </tr>
             <tr>
                 <th>Matematica</th>
@@ -66,7 +75,7 @@
                 <td>X</td>
                 <td>X</td>
                 <td>X</td>
-                <td>X</td>
+                <td class="reprovado">X</td>
             </tr>
             <tr>
                 <th>Historia</th>
